--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,20 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.health-check-properties=query=SELECT 1
+spring.datasource.hikari.leak-detection-threshold=20000
+spring.datasource.hikari.initialization-fail-timeout=0
+
 spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
