--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.health-check-properties=query=SELECT 1
 spring.datasource.hikari.leak-detection-threshold=20000
 spring.datasource.hikari.initialization-fail-timeout=0
+server.port=${PORT:8080}
 
 spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
