Envio de relatórios por e-mail

--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,16 @@
             <version>6.20.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
