--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=saude
-spring.datasource.url=jdbc:mysql://193.203.175.253:3306/u544732739_moni_alimentar?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=u544732739_inaciopedro200
-spring.datasource.password=7kA10p5K9@
+spring.datasource.url=jdbc:mysql://localhost:3306/monitoramento_saude
+spring.datasource.username=root
+spring.datasource.password=2525
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.hikari.max-lifetime=600000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.max-lifetime=15000
+spring.datasource.hikari.idle-timeout=12000
+spring.datasource.hikari.keepalive-time=10000
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.health-check-properties=query=SELECT 1
-spring.datasource.hikari.leak-detection-threshold=20000
+spring.datasource.hikari.leak-detection-threshold=10000
 spring.datasource.hikari.initialization-fail-timeout=0
 server.port=${PORT:8080}
 
@@ -20,5 +20,13 @@ spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+spring.mail.host=smtp.hostinger.com
+spring.mail.port=587
+spring.mail.username=monitoramente_saude@adminpainel.store
+spring.mail.password=Monitoramento@2025
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
