Query dos relatórios alteradas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,57 @@
+# DATABASE CONFIG - OTIMIZADO
 spring.application.name=saude
-spring.datasource.url=jdbc:mysql://193.203.175.253:3306/u544732739_moni_alimentar
+spring.datasource.url=jdbc:mysql://193.203.175.253:3306/u544732739_moni_alimentar?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=yes&characterEncoding=UTF-8&socketTimeout=30000&connectTimeout=5000
 spring.datasource.username=u544732739_inaciopedro200
 spring.datasource.password=7kA10p5K9@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.hikari.max-lifetime=15000
-spring.datasource.hikari.idle-timeout=12000
-spring.datasource.hikari.keepalive-time=10000
-spring.datasource.hikari.connection-timeout=30000
+# HIKARI CP
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=3
-spring.datasource.hikari.validation-timeout=3000
-spring.datasource.hikari.health-check-properties=query=SELECT 1
-spring.datasource.hikari.leak-detection-threshold=10000
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.leak-detection-threshold=60000
 spring.datasource.hikari.initialization-fail-timeout=0
-server.port=${PORT:8080}
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
+# APPLICATION BASIC CONFIG
+server.port=${PORT:8080}
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
+server.compression.min-response-size=512
+
+# JPA/HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=true
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
 spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-api.security.token.secret=${JWT_SECRET:my-secret-key}
+# CACHE - ADICIONAR PARA MELHOR PERFORMANCE
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
 
+# EMAIL CONFIG
 spring.mail.host=smtp.hostinger.com
 spring.mail.port=587
 spring.mail.username=monitoramente_saude@adminpainel.store
 spring.mail.password=Monitoramento@2025
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# TOKEN CONFIG
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+# SPRING BOOT OTIMIZAÇÕES
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
