--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATABASE CONFIG - OTIMIZADO
-spring.application.name=railway
-spring.datasource.url=jdbc:mysql://root:AyhDpZxwmwNtWrcEOZFEPudeYPDFRWsM@switchback.proxy.rlwy.net:22239/railway
+spring.application.name=saude
+spring.datasource.url=jdbc:mysql://localhost:3306/monitoramento_saude
 spring.datasource.username=root
-spring.datasource.password=AyhDpZxwmwNtWrcEOZFEPudeYPDFRWsM
+spring.datasource.password=2525
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # APPLICATION BASIC CONFIG
