--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATABASE CONFIG - OTIMIZADO
 spring.application.name=saude
-spring.datasource.url=jdbc:mysql://localhost:3306/monitoramento_saude
-spring.datasource.username=root
-spring.datasource.password=2525
+spring.datasource.url=jdbc:mysql://193.203.175.253:3306/u544732739_moni_alimentar?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=yes&characterEncoding=UTF-8&socketTimeout=30000&connectTimeout=5000
+spring.datasource.username=u544732739_inaciopedro200
+spring.datasource.password=7kA10p5K9@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # APPLICATION BASIC CONFIG
