--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,16 @@ spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# HikariCP para Railway
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.max-lifetime=120000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.validationTimeout=5000
+
 # EMAIL CONFIG
 spring.mail.host=smtp.hostinger.com
 spring.mail.port=587
@@ -21,6 +31,9 @@ spring.mail.username=monitoramente_saude@adminpainel.store
 spring.mail.password=Monitoramento@2025
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 # TOKEN CONFIG
 api.security.token.secret=${JWT_SECRET:my-secret-key}
