--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validationTimeout=5000
 
 # EMAIL CONFIG
-spring.mail.host=smtp.hostinger.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=monitoramente_saude@adminpainel.store
-spring.mail.password=Monitoramento@2025
+spring.mail.username=monitoramento.alimentar0@gmail.com
+spring.mail.password=vbjz zpvc yhew okwc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
