Ajuste para envio de e-mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATABASE CONFIG - OTIMIZADO
-spring.application.name=saude
-spring.datasource.url=jdbc:mysql://193.203.175.253:3306/u544732739_moni_alimentar?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=yes&characterEncoding=UTF-8&socketTimeout=30000&connectTimeout=5000
-spring.datasource.username=u544732739_inaciopedro200
-spring.datasource.password=7kA10p5K9@
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # APPLICATION BASIC CONFIG
@@ -25,15 +25,13 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validationTimeout=5000
 
 # EMAIL CONFIG
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=monitoramento.alimentar0@gmail.com
-spring.mail.password=vbjz zpvc yhew okwc
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
 
 # TOKEN CONFIG
 api.security.token.secret=${JWT_SECRET:my-secret-key}
