--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,10 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.sendgrid.net
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
 # TOKEN CONFIG
 api.security.token.secret=${JWT_SECRET:my-secret-key}
