--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,15 +23,23 @@ spring.datasource.hikari.idle-timeout=60000
 spring.datasource.hikari.leak-detection-threshold=60000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validationTimeout=5000
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+spring.jdbc.time-zone=UTC
+spring.jackson.date-format=yyyy-MM-dd
 
 # EMAIL CONFIG
 spring.mail.host=${SPRING_MAIL_HOST}
 spring.mail.port=${SPRING_MAIL_PORT}
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
 # LOGGING DETALHADO
 LOGGING_LEVEL_COM_MONITORAMENTO=DEBUG
 LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_MAIL=DEBUG
