--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,15 +31,9 @@ spring.jdbc.time-zone=UTC
 spring.jackson.date-format=yyyy-MM-dd
 
 # EMAIL CONFIG
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.protocol=smtps
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.timeout=5000
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.from.email=${SENDGRID_FROM_EMAIL}
+
 # LOGGING DETALHADO
 LOGGING_LEVEL_COM_MONITORAMENTO=DEBUG
 LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_MAIL=DEBUG
