--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,45 +1,47 @@
-# DATABASE CONFIG - OTIMIZADO
 spring.application.name=${SPRING_APPLICATION_NAME}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# APPLICATION BASIC CONFIG
+# CONFIGURAÇÕES DO SERVIDOR
 server.port=${PORT:8080}
-spring.jpa.hibernate.ddl-auto=update
-
-# JPA/HIBERNATE
-spring.jackson.time-zone=America/Sao_Paulo
 server.error.include-stacktrace=never
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# HikariCP para Railway
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.max-lifetime=120000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=60000
-spring.datasource.hikari.leak-detection-threshold=60000
-spring.datasource.hikari.connection-test-query=SELECT 1
-spring.datasource.hikari.validationTimeout=5000
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
-spring.jdbc.time-zone=UTC
-spring.jackson.date-format=yyyy-MM-dd
 
-# EMAIL CONFIG
+# JPA / HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jdbc.time-zone=UTC
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jackson.date-format=yyyy-MM-dd
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# HikariCP (OTIMIZADO PARA HOSTINGER)
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.keepalive-time=240000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+# UPLOADS
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# EMAIL (SENDGRID)
 sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.from.email=${SENDGRID_FROM_EMAIL}
 
-# LOGGING DETALHADO
-LOGGING_LEVEL_COM_MONITORAMENTO=DEBUG
-LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_MAIL=DEBUG
-LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB=DEBUG
-SERVER_ERROR_INCLUDE_STACKTRACE=always
-SERVER_ERROR_INCLUDE_MESSAGE=always
+# LOGGING
+logging.level.com.monitoramento=DEBUG
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.web=DEBUG
 
-# TOKEN CONFIG
+# TOKEN JWT
 api.security.token.secret=${JWT_SECRET:my-secret-key}
