--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,64 @@
 spring.application.name=${SPRING_APPLICATION_NAME}
+
+# Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Server
 server.port=${PORT:8080}
 server.error.include-stacktrace=never
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 
+# JPA/Hibernate - CORRIGIDO
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jdbc.time-zone=UTC
+
+# TIMEZONE CONSISTENTE - CORRIGIDO
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jackson.time-zone=America/Sao_Paulo
 spring.jackson.date-format=yyyy-MM-dd
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.maximum-pool-size=5
+# DIALECT CORRETO para MySQL 8 - CORRIGIDO
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# CONFIG PARA RESOLVER ERRO 'RESERVED' - ADICIONADO
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# HikariCP - MELHORADO
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=600000
-spring.datasource.hikari.keepalive-time=240000
-spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.max-lifetime=1800000  # 30 minutos (reduzido)
+spring.datasource.hikari.keepalive-time=30000  # 30 segundos
+spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.validation-timeout=5000
-spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.leak-detection-threshold=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.pool-name=HikariPool-Saude
 
+# Multipart
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# SendGrid
 sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.from.email=${SENDGRID_FROM_EMAIL}
 
+# Logging
 logging.level.com.monitoramento=DEBUG
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type=WARN
+logging.level.com.zaxxer.hikari=INFO
 
+# Security
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+# OPEN-IN-VIEW (opcional, para evitar warning)
+spring.jpa.open-in-view=false
