--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1800000  # 30 minutos (reduzido)
-spring.datasource.hikari.keepalive-time=30000  # 30 segundos
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.keepalive-time=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.leak-detection-threshold=30000
