--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=${SPRING_APPLICATION_NAME}
 
 # Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Server
@@ -11,35 +11,43 @@ server.port=${PORT:8080}
 server.error.include-stacktrace=never
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+server.forward-headers-strategy=framework
 
-# JPA/Hibernate - CORRIGIDO
+# JPA/Hibernate - CONFIGURAÇÃO COMPLETA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=false
 
-# TIMEZONE CONSISTENTE - CORRIGIDO
+# TIMEZONE - IMPORTANTE: todas consistentes
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jackson.time-zone=America/Sao_Paulo
-spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
 
-# DIALECT CORRETO para MySQL 8 - CORRIGIDO
+# CONFIGURAÇÕES ESPECÍFICAS para MySQL 8 + Hibernate 6
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# CONFIG PARA RESOLVER ERRO 'RESERVED' - ADICIONADO
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 
-# HikariCP - MELHORADO
+# HikariCP - OTIMIZADO para CLOUD (Koyeb)
 spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.keepalive-time=30000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.keepalive-time=45000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.leak-detection-threshold=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.pool-name=HikariPool-Saude
+spring.datasource.hikari.data-source-properties.socketTimeout=30000
+spring.datasource.hikari.data-source-properties.connectTimeout=10000
 
 # Multipart
 spring.servlet.multipart.max-file-size=10MB
@@ -53,12 +61,20 @@ sendgrid.from.email=${SENDGRID_FROM_EMAIL}
 logging.level.com.monitoramento=DEBUG
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type=WARN
-logging.level.com.zaxxer.hikari=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
 
 # Security
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
-# OPEN-IN-VIEW (opcional, para evitar warning)
+# OPEN-IN-VIEW
 spring.jpa.open-in-view=false
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
