--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# Security
+api.security.token.secret=${JWT_SECRET:default-secret-key-for-development}
+
 # Email
 sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.from.email=${SENDGRID_FROM_EMAIL}
