--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ==================== APPLICATION ====================
-spring.application.name=${SPRING_APPLICATION_NAME}
+spring.application.name=${SPRING_APPLICATION_NAME:saude}
 spring.main.banner-mode=off
 spring.main.lazy-initialization=false
 
@@ -54,7 +54,7 @@ management.health.diskspace.enabled=false
 management.info.env.enabled=true
 
 # ==================== SECURITY ====================
-api.security.token.secret=${JWT_SECRET}
+api.security.token.secret=${JWT_SECRET:default-secret-key-for-development}
 
 # ==================== EMAIL ====================
 sendgrid.api.key=${SENDGRID_API_KEY}
