--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,19 @@
-# ==================== APPLICATION ====================
-spring.application.name=${SPRING_APPLICATION_NAME:saude}
-spring.main.banner-mode=off
-spring.main.lazy-initialization=false
+# application.properties - SEM caracteres especiais
+spring.application.name=${SPRING_APPLICATION_NAME}
 
-# ==================== DATABASE ====================
+# Database
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ==================== SERVER (CRÍTICO) ====================
+# Server
 server.port=${PORT:8080}
 server.error.include-stacktrace=never
-server.error.include-message=always
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
-server.compression.enabled=false
-server.tomcat.mbeanregistry.enabled=false
-server.tomcat.background-processor-delay=2
-server.tomcat.threads.max=50
-server.tomcat.threads.min-spare=5
 
-# ==================== JPA ====================
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -29,49 +21,22 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 spring.jpa.open-in-view=false
-spring.jpa.defer-datasource-initialization=true
 
-# ==================== JACKSON ====================
+# Jackson
 spring.jackson.time-zone=America/Sao_Paulo
 spring.jackson.date-format=yyyy-MM-dd
-spring.jackson.serialization.write-dates-as-timestamps=false
 
-# ==================== HIKARI CP ====================
+# HikariCP
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=120000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=180000
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.connection-test-query=SELECT 1
-spring.datasource.hikari.pool-name=HikariPool-Koyeb
 
-# ==================== HEALTH CHECK (ADICIONE ESSA SEÇÃO) ====================
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
-management.health.db.enabled=true
-management.health.diskspace.enabled=false
-management.info.env.enabled=true
+# Security
+api.security.token.secret=${JWT_SECRET}
 
-# ==================== SECURITY ====================
-api.security.token.secret=${JWT_SECRET:default-secret-key-for-development}
-
-# ==================== EMAIL ====================
-sendgrid.api.key=${SENDGRID_API_KEY}
-sendgrid.from.email=${SENDGRID_FROM_EMAIL}
-
-# ==================== LOGGING (OTIMIZADO) ====================
-logging.level.root=WARN
-logging.level.com.monitoramento.saude=INFO
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type=WARN
-logging.level.com.zaxxer.hikari=INFO
-
-# ==================== MULTIPART ====================
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.enabled=true
-
-# ==================== PROFILES ====================
-spring.profiles.active=prod
+# Logging
+logging.level.root=INFO
+logging.level.com.monitoramento=INFO
