Ajuste no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# application.properties - SEM caracteres especiais
+# application.properties
 spring.application.name=${SPRING_APPLICATION_NAME}
 
 # Database
@@ -30,9 +30,14 @@ spring.jackson.date-format=yyyy-MM-dd
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idle-timeout=60000
-spring.datasource.hikari.max-lifetime=180000
+spring.datasource.hikari.max-lifetime=60000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
+
+# EMAIL CONFIG
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.from.email=${SENDGRID_FROM_EMAIL}
+
 
 # Security
 api.security.token.secret=${JWT_SECRET}
